Fixed size of rating slider on smaller screens

--- a/assets/www/css/style.css
+++ b/assets/www/css/style.css
@@ -12,6 +12,10 @@
 	display:none !important;
 }
 
+.rating-form .ui-slider {
+  width: 80%;
+}
+
 .logo {
 	margin: auto; 
 	display: block;
